--- a/TaskbarReader/TaskbarForm.resx
+++ b/TaskbarReader/TaskbarForm.resx
@@ -3745,6 +3745,9 @@
         AISHAAAI5wAAEfEAADjwAAA4YAAAGGAAABh5AAAweQAAIfEAAAPhAAAMwwAAgAcAAMAPAAA=
 </value>
   </data>
+  <metadata name="autohide_timer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>499, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAwAICAQAAEABADoAgAAxgAAABAQEAABAAQAKAEAAK4DAAAwMAAAAQAIAKgOAADWBAAAICAAAAEA
